// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aliasExpand expand on bash aliases 1`] = `
[
  {
    "complete": false,
    "isOption": false,
    "token": "glo",
    "tokenLength": 3,
  },
]
`;

exports[`aliasExpand expand on bash aliases 2`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "echo",
    "tokenLength": 4,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "lo",
    "tokenLength": 4,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "la",
    "tokenLength": 4,
  },
]
`;

exports[`aliasExpand expand on bash aliases 3`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "git",
    "tokenLength": 3,
  },
]
`;

exports[`aliasExpand expand on bash aliases 4`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "ls",
    "tokenLength": 2,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "--color",
    "tokenLength": 7,
  },
  {
    "complete": true,
    "isOption": false,
    "token": "auto",
    "tokenLength": 4,
  },
]
`;

exports[`aliasExpand expand on zsh aliases 1`] = `
[
  {
    "complete": false,
    "isOption": false,
    "token": "glo",
    "tokenLength": 3,
  },
]
`;

exports[`aliasExpand expand on zsh aliases 2`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "echo",
    "tokenLength": 4,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "lo",
    "tokenLength": 4,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "la",
    "tokenLength": 4,
  },
]
`;

exports[`aliasExpand expand on zsh aliases 3`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "git",
    "tokenLength": 3,
  },
]
`;

exports[`aliasExpand expand on zsh aliases 4`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "ls",
    "tokenLength": 2,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "--color",
    "tokenLength": 7,
  },
  {
    "complete": true,
    "isOption": false,
    "token": "auto",
    "tokenLength": 4,
  },
]
`;
